plugins {
    alias(libs.plugins.android.library)

    id 'com.google.dagger.hilt.android'
}

android {
    namespace 'com.bif.app.data'
    compileSdk {
        version = release(36)
    }

    defaultConfig {
        minSdk 29

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    testOptions {
        unitTests.returnDefaultValues = true
    }
}

dependencies {
    // Module
    implementation project(":domain")
    implementation project(":core")

    implementation libs.appcompat
    implementation libs.material
    implementation libs.work.runtime
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
    implementation libs.retrofit.core

    // Google
    implementation libs.places

    // Room
    implementation libs.room.runtime
    annotationProcessor libs.room.compiler

    // Hilt
    implementation libs.hilt.android
    annotationProcessor libs.hilt.compiler

    // Hilt WorkManager integration
    implementation libs.hilt.work
    annotationProcessor libs.hilt.work.compiler

    // Testing
    androidTestImplementation libs.hilt.android.testing
    androidTestImplementation libs.core.testing
    androidTestAnnotationProcessor libs.hilt.compiler
    testImplementation libs.hilt.android.testing
    testAnnotationProcessor libs.hilt.compiler
    testImplementation libs.core.testing
    debugImplementation libs.fragment.testing

    // Mockito
    testImplementation libs.mockito.core
    testImplementation libs.mockito.inline
}
